--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MarketingApp",
+  "name": "Jagat Didi Foods",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^7.6.3",
     "react": "19.1.1",
     "react-native": "0.82.1",
+    "react-native-image-picker": "^8.2.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0"
   },
