--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native/new-app-screen": "0.82.1",
     "@react-navigation/native": "^7.1.20",
     "@react-navigation/native-stack": "^7.6.3",
     "react": "19.1.1",
     "react-native": "0.82.1",
+    "react-native-element-dropdown": "^2.12.4",
     "react-native-image-picker": "^8.2.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0"
